trying to fix the hieght on mobile!

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -2,10 +2,9 @@ body {
     box-sizing: border-box;
     margin: 0px;
     max-width: auto;
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 #root{
-    
     display: flex;
     flex-direction: column;
 
